--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         <div class='container'>
             <div id='question-container' class='hide'>
                 <div id='question'>Questions</div>
+                <text>Time: <text id='time001'>200</text></text>
+                <!-- <div id='time001'>Time: 200</div> -->
                 <div id='answer-buttons' class='btn-grid'>
                     <button class='btn'>Answer 1</button>
                     <button class='btn'>Answer 2</button>
                     <button class='btn'>Answer 3</button>
                     <button class='btn'>Answer 4</button>
                 </div>
+                <div id='time-up' class='hide'>Time's Up!</div>
             </div>
             <div class='controls'>
                 <button id='start-btn' class='start-btn btn'>Start</button>
