timer resets on restart, no longer stops at zero

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets\style.css"/>
     <script defer type="text/javascript" src="assets\script.js"></script>
+    <script defer type="text/javascript" src="assets\questions.js"></script>
+    <script defer type="text/javascript" src="assets\timer.js"></script>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
 
     <title>Code Quiz</title>
@@ -19,7 +21,7 @@
         <div class='container'>
             <div id='question-container' class='hide'>
                 <div id='question'>Questions</div>
-                <text>Time: <text id='time001'>150</text></text>
+                <text>Time: <text id='time'>100</text></text>
                 <!-- <div id='time001'>Time: 200</div> -->
                 <div id='answer-buttons' class='btn-grid'>
                     <button class='btn'>Answer 1</button>
